[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -45,7 +45,7 @@
    
       <button class="hide" type=text onclick="myfunction6()"  ><strong>X</strong></button>  <button class ="show"  type=text onclick="myfunction2()" ><strong>GO TO GMAIL</strong></button> 
       <br/>
-      <a id ="man" href="https://mail.google.com/mail/u/0/"></a>
+      <a id ="man" href="https://mail.google.com/mail/u/0/" target="_blank"></a>
    
       <p><br/></p>
     
