--- a/ui/profile.html
+++ b/ui/profile.html
@@ -58,7 +58,7 @@
      </div>
      <h3>FEEDBACK</h3>
      <br/>
-     <textarea  type="text" id="name" placeholder="Something about you"  rows="4" columns="6" ></textarea>
+     <textarea  type="text" id="name" placeholder= "Write a Feedback" rows="4" columns="6" ></textarea>
               <br/>  
               <br/>
               <input type="button" value="SUBMIT" onclick="myfunction5()" id="submit_btn" >
