--- a/ui/index.html
+++ b/ui/index.html
@@ -25,7 +25,7 @@
          
          <br> 
           <input  type="text" id="search" placeholder="search"  >
-       <input type="button" value="Search" id="submit_btn" >
+       <input type="button" value="Search" id="search_btn" >
       <p id="demo1">
          
             </p>
