[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@
         </div> 
          
          <br> 
-          <input  type="text" id="search" placeholder="search"  >
+          <input  type="text" id="element" placeholder="search"  >
        <input type="button" value="search_btn" id="search_btn" >
       <p id="demo1">
          
