[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -172,7 +172,7 @@
         list+=names[i];
          }
 
-    document.getElementById("Krina").innerHTML=list;
+    document.getElementById("feedback").innerHTML=list;
   
     
      }
