[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -45,7 +45,7 @@
   
   
   
-  <button class="hide" type=text onclick="myfunction6()"  ><strong>X</strong></button>  <a href="https://www.google.com/"><button>GO to google </button></a>
+  <button class="hide" type=text onclick="myfunction6()"  ><strong>X</strong></button><a href="https://www.google.com/"><button class = "vijay1">GO to google </button></a>
      
       <p><br/></p>
     
