[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -45,7 +45,7 @@
   
   
   
-  <button class="hide" type=text onclick="myfunction6()"  ><strong>X</strong></button><a href="https://mail.google.com/mail/"><button class = "show">GO TO GMAIL </button></a>
+  <button class="hide" type=text onclick="myfunction6()"  ><strong>X</strong></button><a href="https://mail.google.com/mail/"><button >GO TO GMAIL </button></a>
      
       <p><br/></p>
     
