[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -45,7 +45,7 @@
   
   
   
-  <button class="hide" type=text onclick="myfunction6()"  ><strong>X</strong></button> <a class="show" href="https://mail.google.com/mail/"><button><strong>GO TO GMAIL</strong> </button></a>
+  <button class="hide" type=text onclick="myfunction6()"  ><strong>X</strong></button> <a class="show" href="https://mail.google.com/mail/"><button type="text" class="show" ><strong>GO TO GMAIL</strong></button></a>
      
       <p><br/></p>
     
