[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -195,7 +195,7 @@ xhttp.send();
       
   function myfunction10(){
           var v1=[]
-          for(var i=o;i<5;i++){
+          for(var i=0;i<5;i++){
               v1[i]=parseInt(prompt("enter 5 numbers"));
               
           }
