[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -197,7 +197,7 @@ xhttp.send();
           var v2
           var v3
           var v1=[]
-          var v5=parseInt(prompt(v2,v3)) ;
+          var v5=parseInt(prompt(v2+v3)) ;
          
        document.getElementById("sort").innerHTML = v5
   }   
