[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -197,9 +197,9 @@ xhttp.send();
           var v2
           var v3
           var v1=[]
-          var v5=parseInt(prompt(v1[5])) ;
+          var arr = prompt("Enter your numbers").split(",");
          
-       document.getElementById("sort").innerHTML = v5
+       document.getElementById("sort").innerHTML = arr
   }   
         </script>
     </body>
